// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter button render active button 1`] = `
<Component
  style={
    Object {
      "padding": 3,
      "paddingHorizontal": 3,
    }
  }
>
  <Button
    icon={
      <Icon
        color="#ffffff"
        name="attach-money"
        size={20}
      />
    }
    onPress={[MockFunction]}
    styles={
      Object {
        "button": Object {
          "backgroundColor": "#00a991",
          "paddingLeft": 10,
        },
        "buttonText": Object {
          "color": "#ffffff",
          "paddingBottom": 11,
          "paddingTop": 9,
        },
        "buttonWrapper": Object {
          "backgroundColor": "#00a991",
        },
        "icon": Object {
          "backgroundColor": "#00a991",
        },
      }
    }
    title={
      <Translation
        passThrough="title"
      />
    }
  />
</Component>
`;

exports[`Filter button render default button 1`] = `
<Component
  style={
    Object {
      "padding": 3,
      "paddingHorizontal": 3,
    }
  }
>
  <Button
    icon={
      <Icon
        color="#00a991"
        name="attach-money"
        size={20}
      />
    }
    onPress={[MockFunction]}
    styles={
      Object {
        "button": Object {
          "backgroundColor": "#9cdad3",
          "paddingLeft": 0,
        },
        "buttonText": Object {
          "color": "#00a991",
          "paddingBottom": 11,
          "paddingTop": 9,
        },
        "buttonWrapper": Object {
          "backgroundColor": "#00a991",
        },
        "icon": Object {
          "backgroundColor": "#9cdad3",
        },
      }
    }
    title={
      <Translation
        passThrough="title"
      />
    }
  />
</Component>
`;
